fix overflow

--- a/frontend/src/app/components/blockchain-blocks/blockchain-blocks.component.scss
+++ b/frontend/src/app/components/blockchain-blocks/blockchain-blocks.component.scss
@@ -173,6 +173,7 @@
 }
 .show {
   opacity: 1;
+  white-space: nowrap;
 }
 .hide {
   opacity: 0.4;
